{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 16,
  "lineage": "9a624e41-cbdc-c2c0-e0e8-b35dba363742",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654228311:internet-gateway/igw-03bc9aeedd3d4830a",
            "id": "igw-03bc9aeedd3d4830a",
            "owner_id": "654654228311",
            "region": "us-east-1",
            "tags": {
              "Name": "redis-cluster-igw"
            },
            "tags_all": {
              "Name": "redis-cluster-igw"
            },
            "vpc_id": "vpc-00c3b8716307002a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654228311:route-table/rtb-00ac323df4937eb4e",
            "id": "rtb-00ac323df4937eb4e",
            "owner_id": "654654228311",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03bc9aeedd3d4830a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c3b8716307002a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654228311",
            "id": "rtb-00ac323df4937eb4e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035ee2ee64b611595",
            "region": "us-east-1",
            "route_table_id": "rtb-00ac323df4937eb4e",
            "subnet_id": "subnet-0c178b559f199c542"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.main_subnet",
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654228311:security-group/sg-03023f09b2d65c71f",
            "description": "Allow SSH, HTTP, and internal cluster traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03023f09b2d65c71f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "redis_cluster_sg",
            "name_prefix": "",
            "owner_id": "654654228311",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c3b8716307002a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654228311",
            "id": "sg-03023f09b2d65c71f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654228311:subnet/subnet-0c178b559f199c542",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c178b559f199c542",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654228311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "redis-cluster-subnet"
            },
            "tags_all": {
              "Name": "redis-cluster-subnet"
            },
            "vpc_id": "vpc-00c3b8716307002a0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654228311",
            "id": "subnet-0c178b559f199c542",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "redis_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654228311:vpc/vpc-00c3b8716307002a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ce621a544edbb1c6",
            "default_route_table_id": "rtb-05faa32824bb08f3c",
            "default_security_group_id": "sg-0aad36c8b3f02391a",
            "dhcp_options_id": "dopt-0a4ec95dc5471b708",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c3b8716307002a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05faa32824bb08f3c",
            "owner_id": "654654228311",
            "region": "us-east-1",
            "tags": {
              "Name": "redis-cluster-vpc"
            },
            "tags_all": {
              "Name": "redis-cluster-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654228311",
            "id": "vpc-00c3b8716307002a0",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}